# erosion_dilation_rle

./: README.md  machado.diff
CMakeModules/: CSS-Macros.cmake  FindCImg.cmake  FindCppUnit.cmake  FindLOG4CPLUS.cmake  GNUInstallDirs.cmake
iplplus/: CMakeLists.txt  LICENCE.txt  README  iplplusConfig.cmake.in  iplplusConfigVersion.cmake.in  log.cfg
iplplus/examples/: CMakeLists.txt  config.h.cmake  main.cc
iplplus/images/: README.txt  imgprc3.tif
iplplus/iplplus/: CMakeLists.txt  iplplusInstallConfig.cmake.in
iplplus/iplplus/doc/: CMakeLists.txt  Doxyfile.cmake  koordsystem.dox  serialization.dox  unit_test.dox
iplplus/iplplus/include/ipl/: angle.hh  board.hh  cache.hh  cimgboard.hh  circle.hh  config.hh.cmake  ellipse.hh  gapiterator.hh  iplerr.hh  ipltypes.hh  log.hh  loglevel.hh  mathli.hh  pict.hh  point.hh  polygon.hh  range.hh  rbo.hh  rect.hh  region.hh  sshape.hh  timer.hh  trafo2d.hh  type_manip.hh  validable.hh  version.hh.cmake  winp.hh
iplplus/iplplus/src/core/: CMakeLists.txt  circle.cc  ellipse.cc  iplerr.cc  ipltypes.cc  pict.cc  pict_filter.cc  pict_instantiate.cc  pict_render.cc  pict_segment.cc  pict_serialize.cc  point.cc  polygon.cc  rbo.cc  rect.cc  region.cc  region_create.cc  region_morph.cc  region_set.cc  trafo2d.cc  winp.cc
iplplus/iplplus/src/graphics/: CMakeLists.txt  board.cc  cimgboard.cc
iplplus/iplplus/src/hal/: CMakeLists.txt  logger.cc  timer.cc
iplplus/tests/: CMakeLists.txt  config.hh.cmake  test_region_morph.cc
machado/: .cproject  .project  Makefile  README.txt  basics.c  dilations.c  erosions.c  kick-mm  main.cpp  mmach  read_me  teste.c  thesisTests
machado/datas/: c10.txt  c100.txt  c15.txt  c150.txt  c200.txt  c25.txt  c250.txt  c3.txt  c300.txt  c5.txt  c50.txt  c7.txt  c75.txt  d10.txt  d100.txt  d15.txt  d150.txt  d200.txt  d25.txt  d250.txt  d3.txt  d300.txt  d5.txt  d50.txt  d7.txt  d75.txt  l10.txt  l100.txt  l15.txt  l150.txt  l200.txt  l25.txt  l250.txt  l3.txt  l300.txt  l5.txt  l50.txt  l7.txt  l75.txt
machado/datas/finais/: README.txt
machado/pngwriter/: Makefile
